# gtk_ollama

./: .gitignore  README.md  flatpak-pip-generator  meson.build  org.descarpentries.gtk_ollama.json
.flatpak-builder/cache/refs/heads/x86_64-org.descarpentries.gtk_ollama.json/: build-gtk_ollama  build-ollama  build-requests  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-org.descarpentries.gtk_ollama.json
.flatpak-builder/git/file_home_dylan_Documents_Programmation_Projet_Application_Gnome_Builder_Projects_gtk_ollama_/: FETCH_HEAD  config
.flatpak-builder/git/file_home_dylan_Documents_Programmation_Projet_Application_Gnome_Builder_Projects_gtk_ollama_/objects/pack/: pack-67759b6c5fe4164aae8257998fc32a2f2e2977a5.idx  pack-67759b6c5fe4164aae8257998fc32a2f2e2977a5.pack  pack-67759b6c5fe4164aae8257998fc32a2f2e2977a5.rev
.flatpak-builder/git/file_home_dylan_Documents_Programmation_Projet_Application_Gnome_Builder_Projects_gtk_ollama_/refs/heads/: master
.flatpak/flatpak-builder/cache/refs/heads/x86_64-home_2Fdylan_2FDocuments_2FProgrammation_2FProjet_2FApplication_2FGnome_Builder_Projects_2Fgtk_ollama_2Forg.descarpentries.gtk_ollama.json/: build-ollama  init
.flatpak/flatpak-builder/checksums/: x86_64-org.descarpentries.gtk_ollama.json
data/: meson.build  org.descarpentries.gtk_ollama.desktop.in  org.descarpentries.gtk_ollama.metainfo.xml.in  org.descarpentries.gtk_ollama.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: gtk_ollama.gresource.xml  gtk_ollama.in  main.py  meson.build  styles.css  window.cmb  window.py  window.ui
src/gtk/help_overlay/: help_overlay.py
src/gtk/manage_model/: manage_model.ui  manage_model_window.py
src/ollama_tools/: TTSManager.py  ollama_client.py  ollama_get_models.py  ollama_model.py
src/styles/: styles.css
src/utils/: dbus_service.py  voice_recognizer.py
src/widgets/: message_widget.py
